--- a/todo.txt
+++ b/todo.txt
@@ -1,19 +1,25 @@
 Todo List
 ------------
-*   contact freetype-py author re use of his code in BBX-Python, when it's stable enough
-    - push Python 3 changes to him
-    - remove from tree and make installer to download from code.google.com
-*   check size of corner-swipe area
-*   create Event class hierarchy
-*   create App base class with the plumbing
-*   check whether the latest beta OS has the bytes/unicode problem with geolocation
-*   receive keyboard events and test with BT keyboard for repeat and special key support
-*   provide some callback for display of text (scrolling console output?) in OpenGL context
+*   starter/template app
+*   sample app(s)
+*   bbpy Application support to set initial size to avoid hardcoding in QML
+*   clean out old stuff or push to subfolder as history
+*   improve the CLI code with better editing and command history
+*   integrate something like maybe a web-based debug capability ala
+    Pylons/Flask, to allow interactive browsing of tracebacks/stack frames
+*   improved infrastructure in utility module for things like copying
+    the log to shared/documents, catching exceptions etc
+*   put a PySide library package on a web site and provide a utility module
+    or app which installs it all when loaded/launched
 
 Done
 -----
+*   standardize on the shared/misc structure for apps for quick development
+*   clean up licensing: add our own, document PySide/Qt LGPL stuff
 *   wrap FreeType or use an existing wrapper and get some basic text display
 *   get images working so simple bitmaps can be arranged onscreen
 *   handle errors from PyRun_SimpleFile() and build a traceback string for display
     (done through bbxmain.py instead)
 *   make dialogs not system modal
+*   check whether the latest beta OS has the bytes/unicode problem with geolocation
+*   create App base class with the plumbing
