--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,12 @@
 Todo List
 ------------
+*   build tool supporting various profiles for debug builds running from
+    shared/misc, release builds, trial release builds (devmode but not
+    in shared/misc), etc, eliminating the need for a per-app build.sh
+*   port LitePOC code to use bb::cascades::Application from libQtCascades.so
 *   detect when trying to run from shared/misc and access_shared not granted
 *   starter/template app
 *   sample app(s)
-*   bbpy Application support to set initial size to avoid hardcoding in QML
 *   clean out old stuff or push to subfolder as history
 *   improve the CLI code with better editing and command history
 *   integrate something like maybe a web-based debug capability ala
@@ -15,6 +18,7 @@ Todo List
 
 Done
 -----
+*   bbpy Application support to set initial size to avoid hardcoding in QML
 *   standardize on the shared/misc structure for apps for quick development
 *   clean up licensing: add our own, document PySide/Qt LGPL stuff
 *   wrap FreeType or use an existing wrapper and get some basic text display
